feat: add admin actions log
